services/mealie/resources/mealie.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v1.8.0
          resources:
            limits:
              memory: 400M
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
          ports:
            - name: web
              containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
